[FLINK-33506] Add support for jdk17 for AWS connectors