@@ -34,6 +34,9 @@ under the License.
 
     <packaging>jar</packaging>
 
+    <properties>
+        <flink.connector.module.config><!-- Required by DynamoDbSinkITCase --> --add-opens=java.base/java.util=ALL-UNNAMED</flink.connector.module.config>
+    </properties>
     <dependencyManagement>
         <dependencies>
             <dependency>
